[tests] Modernize collection usage