@@ -16,7 +16,6 @@
 package org.mybatis.spring.batch.builder;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -70,8 +69,8 @@ class MyBatisCursorItemReaderBuilderTest {
         var itemReader = new MyBatisCursorItemReaderBuilder<Foo>()
                 .sqlSessionFactory(this.sqlSessionFactory)
                 .queryId("selectFoo")
-                .parameterValues(Collections.singletonMap("id", 1))
-                .parameterValuesSupplier(() -> Collections.singletonMap("name", "Doe"))
+                .parameterValues(Map.of("id", 1))
+                .parameterValuesSupplier(() -> Map.of("name", "Doe"))
                 .build();
         // @formatter:on
     itemReader.afterPropertiesSet();
@@ -97,8 +96,8 @@ class MyBatisCursorItemReaderBuilderTest {
         var itemReader = new MyBatisCursorItemReaderBuilder<Foo>()
                 .sqlSessionFactory(this.sqlSessionFactory)
                 .queryId("selectFoo")
-                .parameterValues(Collections.singletonMap("id", 1))
-                .parameterValuesSupplier(() -> Collections.singletonMap("name", "Doe"))
+                .parameterValues(Map.of("id", 1))
+                .parameterValuesSupplier(() -> Map.of("name", "Doe"))
                 .saveState(false)
                 .build();
         // @formatter:on
@@ -123,8 +122,8 @@ class MyBatisCursorItemReaderBuilderTest {
         var itemReader = new MyBatisCursorItemReaderBuilder<Foo>()
                 .sqlSessionFactory(this.sqlSessionFactory)
                 .queryId("selectFoo")
-                .parameterValues(Collections.singletonMap("id", 1))
-                .parameterValuesSupplier(() -> Collections.singletonMap("name", "Doe"))
+                .parameterValues(Map.of("id", 1))
+                .parameterValuesSupplier(() -> Map.of("name", "Doe"))
                 .maxItemCount(2)
                 .build();
         // @formatter:on
